--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,4 +6,4 @@ ADD requirements.txt /code/
 RUN pip install -r requirements.txt
 ADD . /code/
 RUN python manage.py migrate
-RUN python manage.py runserver 0.0.0.0:80 
+#RUN python manage.py runserver 0.0.0.0:80 
